# trainbot

./: .dockerignore  .gitignore  .impeccable.md  100_scrape_europeansleeper.ipynb  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  extract.py  main.py  pyproject.toml  scraper_code.py  verify.py
.agents/rules/: python.md
.claude/: settings.local.json
.cursor/rules/: python.mdc
.cursor/skills/search-db/: SKILL.md
agent_utils/: build_city_connections.py  search_db.py
alembic/: env.py
alembic/versions/: 503ead3a6c2d_create_routes_table.py  53d2a2855de0_split_routes_and_prices.py  a1b2c3d4e5f6_add_current_availability.py  b7ff82388d46_add_is_couchette_to_price.py
src/: EuropeanSleeperScraper.py  IntercityPlScraper.py  NightjetScraper.py  RegioJetScraper.py  RoutesScraper.py  ScrapeResult.py  captcha.py  flows.py  intercity_pl_cities.py  models.py
src/scrapers/: __init__.py
src/scrapers/european_sleeper/: __init__.py  scraper.py
src/scrapers/intercity_pl/: __init__.py  scraper.py
src/scrapers/kombo/: __init__.py  scraper.py
src/scrapers/nightjet/: __init__.py  scraper.py
src/scrapers/regiojet/: __init__.py  scraper.py
tests/: run_flow.py
ui/: cities.py  models.py  tests.py  urls.py  views.py
ui/static/ui/: nav.js  script.js  style.css
ui/templates/ui/: about.html  coverage.html  index.html
web/: settings.py  urls.py
