[project]
name = "trainbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apprise>=1.9.7",
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "gunicorn>=25.1.0",
    "pandas>=3.0.0",
    "prefect>=3.6.21",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "whitenoise>=6.12.0",
    "curl-cffi>=0.15.0",
]
